# V1_Build

./: .editorconfig  .env  .env.example  .env.template  .gitignore  .mypy_cache 2  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .releaserc  ANALYSIS_REPORT.md  APPLE_SILICON_M3MAX_OPTIMIZATION_GUIDE.md  BUSINESS_IMPACT_ANALYSIS.md  DEPLOYMENT_QUICK_REFERENCE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.kali  Dockerfile.production  INSTALL.md  ISSUES_FIXED.md  KALI_INTEGRATION_SUMMARY.md  M3_MAX_DEPLOYMENT_GUIDE.md  M3_MAX_SETUP_GUIDE.md  Makefile  PRODUCTION_CHECKLIST.md  PROGRESS_TRACKING.md  Package.swift  QUICK_REFERENCE.md  README-ops.md  README.md  README_ENHANCED_PLATFORM.md  README_KALI_AUTOMATION.md  README_M3MAX.md  SECURITY.md  SimpleAIFrameworkApp.swift  TECHNICAL_ASSESSMENT.md  TROUBLESHOOTING.md  backup.sh  deploy_m3_max.sh  dev.db  (+38 more)
backend/: .coverage  .coverage 2  .env.example  Dockerfile  Dockerfile.webexec  alembic.ini  dev.db  mypy.ini  openapi.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  043f676b4c56_init_schema.py  1a2b3c4d_add_artifact_metadata.py  2b3c4d5_add_runs_indexes.py  3f_seed_automation_rules.py
backend/app/: db.py  main.py  models.py  observability.py  schemas.py
backend/app/agent/: agent_registry.py  celery_app.py  pipeline.py  tasks.py
backend/app/ai/: engines.py  investigation_planner.py  models.py  router.py  schemas.py  system_brain.py
backend/app/analyzers/: sandbox.py  static_analyzer.py
backend/scripts/: devserver.py  export_openapi.py  get_google_tokens.py  google_diag.py  run_consumer.py  setup_integrations.py  smoke_check.py
backend/tests/: README_forensics_tests.md  conftest.py  test_admin_cleanup.py  test_agent.py  test_ai_endpoints.py  test_auth.py  test_auto_reply.py  test_automation_core.py  test_crud_update_delete.py  test_departments_catalog.py  test_filters_sort.py  test_forensics_workflows.py  test_health.py  test_hs256_jwt_util.py  test_ideation_engine.py  test_life_auth_integration.py  test_life_new_endpoints.py  test_list_endpoints.py  test_llm_local.py  test_llm_router.py  test_metrics_endpoint.py  test_metrics_labels.py  test_openapi_examples.py  test_operator_e2e.py  test_operator_endpoints.py  test_personal_basic.py  test_prototype_builder.py  test_redis_bus.py  test_research_fixture_adapter.py  test_research_flag.py  test_runs_api.py  test_runs_api_rbac.py  test_selfheal_endpoints.py  test_tools_web_research.py  test_users_and_protected.py  test_web_research_cache.py  test_web_research_cli.py  test_web_research_limiter.py  test_web_research_normalize.py
(+1338 files in other folders)
