[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "builder"
version = "0.1.0"
description = "Project scaffolding and automation for AI build system"
authors = [{ name = "x" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
keywords = ["automation", "ai", "scaffold"]

[project.scripts]
builder = "builder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"backend/app/automation/orchestrator.py" = ["PLC0415"]
"backend/app/prototype_builder/tasks.py" = ["PLC0415"]
"backend/app/reliability/rate_limiter.py" = ["PLC0415"]
"backend/tests/test_research_flag.py" = ["PLC0415"]
"backend/tests/test_tools_web_research.py" = ["PLC0415"]
"backend/tests/**/*.py" = ["PLR2004"]
"backend/app/main.py" = ["PLR0915"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
exclude = [".venv", "toolkits"]

[tool.isort]
profile = "black"
